# atracbot-dev

./: Correlation.txt  README.md  bismillah20.xml
.catkin_tools/profiles/default/: devel_collisions.txt
CalibFile_thoriq/: D1.yml  D2.yml  M2.yml  R1.yml  R2.yml  T.yml  data.txt
CalibFile_thoriq/backup/: D1.yml  D2.yml  M1.yml  M2.yml  P1.yml  P2.yml  Q.yml  R1.yml  R2.yml  T.yml  mx1.yml  mx2.yml  my1.yml  my2.yml
CalibFile_thoriq/backup sip/: D1.yml  D2.yml  M1.yml  M2.yml  P1.yml  P2.yml  Q.yml  R1.yml  R2.yml  T.yml  mx1.yml  mx2.yml  my1.yml  my2.yml
CalibFile_thoriq/backup sip2/: M1.yml  P1.yml  P2.yml  Q.yml  mx1.yml  mx2.yml  my1.yml  my2.yml
CalibFile_thoriq/backup sip3/: D1.yml  D2.yml  M1.yml  M2.yml  P1.yml  P2.yml  Q.yml  R1.yml  R2.yml  T.yml  mx1.yml  mx2.yml  my1.yml  my2.yml
FeatureXML/: Svm_Feature_Linear_All.xml  Svm_Feature_Linear_All_2.xml  cascade_waste.xml  eigenValues_All.xml  eigenValues_All_2.xml
Python tele/: bot.py  data_sensor.sql  save.py
TrainingHOG/: HOG_SVM0.txt  HOG_SVM0_-1.txt
devel/include/telegram_ros/: LabeledImage.h  Options.h
devel/lib/pkgconfig/: opencv_tutorial.pc  prediction_system.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  serial.pc  slave.pc  telegram.pc  telegram_ros.pc  vision.pc
devel/lib/prediction_system/: publisher
devel/lib/python2.7/dist-packages/rosserial_arduino/: __init__.py
devel/lib/python2.7/dist-packages/rosserial_client/: __init__.py
devel/lib/python2.7/dist-packages/rosserial_python/: __init__.py
devel/lib/python2.7/dist-packages/rosserial_vex_cortex/: __init__.py
devel/lib/python2.7/dist-packages/rosserial_vex_v5/: __init__.py
devel/lib/python2.7/dist-packages/telegram_ros/msg/: _LabeledImage.py  _Options.py  __init__.py
devel/lib/python2.7/dist-packages/xbee/: __init__.py
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/serial/: serial_example
devel/lib/slave/: data_conversion  decision_making_system  prediction_system  read_sensor
devel/lib/vision/: deteksi_sampah  deteksi_target  img_subscriber  minoru_camera  stereo_publisher  stereo_subscriber  target_detection  trash_detection  trash_detection_copy
devel/share/common-lisp/ros/telegram_ros/msg/: LabeledImage.lisp  Options.lisp  _package.lisp  _package_LabeledImage.lisp  _package_Options.lisp  telegram_ros-msg.asd
devel/share/gennodejs/ros/telegram_ros/msg/: LabeledImage.js  Options.js  _index.js
devel/share/opencv_tutorial/cmake/: opencv_tutorialConfig.cmake
devel/share/prediction_system/cmake/: prediction_systemConfig.cmake
devel/share/roseus/ros/rosserial_arduino/: manifest.l
devel/share/roseus/ros/rosserial_mbed/: manifest.l
devel/share/roseus/ros/rosserial_msgs/: manifest.l
devel/share/roseus/ros/telegram_ros/: manifest.l
devel/share/roseus/ros/telegram_ros/msg/: LabeledImage.l  Options.l
devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-extras.cmake  rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
devel/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
devel/share/rosserial_test/cmake/: rosserial_testConfig.cmake
devel/share/rosserial_tivac/cmake/: rosserial_tivac-extras.cmake  rosserial_tivacConfig.cmake
devel/share/rosserial_vex_cortex/cmake/: rosserial_vex_cortexConfig.cmake
devel/share/rosserial_vex_v5/cmake/: rosserial_vex_v5Config.cmake
devel/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
devel/share/rosserial_xbee/cmake/: rosserial_xbeeConfig.cmake
devel/share/serial/cmake/: serialConfig.cmake
devel/share/slave/cmake/: slaveConfig.cmake
devel/share/telegram/cmake/: telegramConfig.cmake
devel/share/telegram_ros/cmake/: telegram_ros-msg-extras.cmake  telegram_ros-msg-paths.cmake  telegram_rosConfig.cmake
devel/share/vision/cmake/: visionConfig.cmake
src/beginner_tutorials/src/: open_camera.cpp
src/my_roscpp_library/: CMakeLists.txt
src/my_roscpp_library/include/my_roscpp_library/: my_glcm.h  my_stereofunction.h  my_stereograb.h
src/my_roscpp_library/src/: my_hog.cpp  my_stereofunction.cpp  my_stereofunction_depth.cpp  my_stereograb.cpp
src/opencv_tutorial/: CMakeLists.txt
src/opencv_tutorial/src/: cam_test.cpp
src/prediction_system/: CMakeLists.txt  package.xml
src/prediction_system/src/: publisher.cpp
src/slave/: CMakeLists.txt  package.xml
src/slave/launch/: slave (copy).launch  slave.launch
src/slave/src/: data_conversion.cpp  decision_making_system.cpp  prediction_system.cpp  publisher.cpp  read_sensor.cpp
src/telegram/: CMakeLists.txt  package.xml
src/telegram/src/: publisher.py  save_data.py  subscriber.py  tele.py
src/telegram/src/launch/: py.launch
src/vision/: CMakeLists.txt
src/vision/launch/: camera.launch  sound.launch  target.launch
src/vision/src/: deteksi_sampah.cpp  deteksi_target.cpp  img_subscriber.cpp  minoru_camera.cpp  stereo_publisher.cpp  stereo_subscriber.cpp  target_detection.cpp  target_detection_old.cpp  trash_detection copy.cpp  trash_detection.cpp  trash_detection_copy.cpp
